# Vaultik

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
docs/: guide.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/history/: db.rs  mod.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/password/: mod.rs
src-tauri/src/profile/: store.rs  types.rs
src-tauri/src/restic/: cli.rs  error.rs  executor.rs  mod.rs  process.rs  ssh_executor.rs  types.rs
src-tauri/src/schedule/: mod.rs
src/components/: ProgressBar.tsx  Sidebar.tsx
src/hooks/: useResticEvents.ts  useTheme.ts
src/lib/: config.ts  tauri.ts  types.ts
src/pages/: Dashboard.tsx  ProfileEditor.tsx  RunHistory.tsx  Settings.tsx  SnapshotBrowser.tsx  Wizard.tsx
